implementacion SEO y Google Anallytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <!-- Google Analytics (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSES4S50PT"></script>
     <script>
@@ -18,16 +19,19 @@
 
     <!-- Meta SEO -->
     <title>UnenGroup - Tu Aliado en Bienes Raíces</title>
-    <meta name="description" content="UnenGroup es tu inmobiliaria de confianza en Córdoba. Encuentra propiedades en venta y alquiler: casas, departamentos, terrenos y locales. Tasaciones online y asesoramiento en inversión inmobiliaria. ¡Hacé realidad tu próxima compra o alquiler con expertos en bienes raíces!">
-    <meta name="keywords" content="inmobiliaria en Córdoba, bienes raíces, compra de casas, venta de departamentos, alquiler temporario, tasaciones online, inversión inmobiliaria, propiedades en venta, alquiler de oficinas, terrenos en venta, casas en country, propiedades exclusivas, real estate, alquiler de locales comerciales">
+    <meta name="description"
+        content="Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.">
+    <meta name="keywords"
+        content="inmobiliaria, bienes raíces, compra de casas, alquiler de departamentos, propiedades en venta, UnenGroup">
     <meta name="author" content="UnenGroup">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://unengroup.com.ar/">
 
     <!-- Open Graph (Facebook, WhatsApp, etc.) -->
     <meta property="og:title" content="UnenGroup - Tu Aliado en Bienes Raíces">
-    <meta property="og:description" content="Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.">
-    <meta property="og:image" content="https://unengroup.com.ar/images/faviCon.jpg">
+    <meta property="og:description"
+        content="Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.">
+    <meta property="og:image" content="https://unengroup.com.ar/images/logo.png">
     <meta property="og:url" content="https://unengroup.com.ar/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="UnenGroup">
@@ -35,38 +39,61 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="UnenGroup - Tu Aliado en Bienes Raíces">
-    <meta name="twitter:description" content="Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.">
-    <meta name="twitter:image" content="https://unengroup.com.ar/images/faviCon.jpg">
+    <meta name="twitter:description"
+        content="Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.">
+    <meta name="twitter:image" content="https://unengroup.com.ar/images/logo.png">
     <meta name="twitter:site" content="@UnenGroup">
     <meta name="twitter:creator" content="@UnenGroup">
 
     <!-- Favicon -->
     <link rel="icon" href="https://unengroup.com.ar/images/favicon.ico" type="image/x-icon">
 
-    <!-- Google Verification (Para Search Console) -->
-    <meta name="google-site-verification" content="TU_CODIGO_DE_VERIFICACION">
+    <!-- Icono del Sitio -->
+    <link rel="icon" href="./images/faviCon.jpg" type="image/x-icon">
+
+    <!-- CSS Frameworks y Librerías -->
+
+    <!-- Google Recaptcha  -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Pannellum  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum/build/pannellum.css">
+    <!-- Swiper.js -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- Fuente  -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Raleway:wght@300&display=swap"
+        rel="stylesheet">
+    <!-- Estilos Propios -->
+    <link rel="stylesheet" href="./css/stylesGen.css">
+    <link rel="stylesheet" href="./css/stylesInicio.css">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/a720cb8047.js" crossorigin="anonymous"></script>
 
     <!-- Schema Markup JSON-LD (SEO avanzado para Google) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "UnenGroup",
-      "url": "https://unengroup.com.ar",
-      "logo": "https://unengroup.com.ar/images/faviCon.jpg",
-      "description": "UnenGroup es tu inmobiliaria de confianza en Córdoba. Encuentra propiedades en venta y alquiler: casas, departamentos, terrenos y locales. Tasaciones online y asesoramiento en inversión inmobiliaria. ¡Hacé realidad tu próxima compra o alquiler con expertos en bienes raíces!",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+54 9 351 6837691",
-        "contactType": "customer service"
-      },
-      "sameAs": [
-        "https://www.instagram.com/unengroup/",
-        "https://www.facebook.com/coty.garcia",
-        "https://www.linkedin.com/company/unengroup"
-      ]
-    }
-    </script>
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "UnenGroup",
+          "url": "https://unengroup.com.ar",
+          "logo": "https://unengroup.com.ar/images/logo.png",
+          "description": "Encuentra tu hogar ideal o inversión inmobiliaria con UnenGroup. Descubre propiedades en venta y alquiler con asesoramiento personalizado.",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+54 9 351 6837691",
+            "contactType": "customer service"
+          },
+          "sameAs": [
+            "https://www.instagram.com/unengroup/",
+            "https://www.facebook.com/coty.garcia",
+            "https://www.linkedin.com/company/unengroup"
+          ]
+        }
+        </script>
 </head>
 
 <body>
